<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/margin_medium"
    card_view:cardElevation="@dimen/card_elevation_small"
    card_view:cardUseCompatPadding="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/favourites_coofde_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/favourites_coofde_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/store"
                android:padding="@dimen/padding_small"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/favourites_coofde_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/offer_title"
                android:padding="@dimen/padding_small"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/favourites_coofde_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/offer_desc"
                android:padding="@dimen/padding_small"

                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/favourites_coofde_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/button_teal"
                android:contentDescription="@string/button"
                android:focusable="true"
                android:text="@string/delete"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/favourites_coofde_operation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/button_material"
                android:contentDescription="@string/button"
                android:focusable="true"
                android:text="@string/get_code"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>