<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.akhooo.coofde.activity.AboutUsActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/card_elevation_small"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_about_coofde_title"
                android:padding="@dimen/padding_medium"
                android:text="@string/app_name"
                android:textColor="@color/orange"
                android:textStyle="bold"
                android:contentDescription="@string/about_us"
                />

            <TextView
                android:id="@+id/textview_about_coofde"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_medium"
                android:text="@string/about_coofde"
                android:contentDescription="@string/team"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/card_elevation_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textview_about_team_title"
                android:padding="@dimen/padding_medium"
                android:text="@string/team"
                android:textColor="@color/orange"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/textview_team_coofde"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/padding_medium"
                android:text="@string/about_team" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
