<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_large"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:max="100"
        android:indeterminate="true"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        />

    <android.support.v7.widget.CardView
        android:id="@+id/offer_details_cardview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/card_elevation_small"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium"
            >

            <TextView
                android:id="@+id/offer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:contentDescription="@string/offer_title"
                />

            <TextView
                android:id="@+id/offer_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:contentDescription="@string/offer_desc"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/margin_medium"
                >

                <TextView
                    android:id="@+id/offer_views_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_views"
                    android:textStyle="bold"
                    android:contentDescription="@string/label_views"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/offer_views"
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:contentDescription="@string/label_views"

                    />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
